--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,29 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+@layer components {
+  h1 {
+    @apply font-display;
   }
-  body {
-    color: white;
-    background: black;
+  h2 {
+    @apply font-display;
+  }
+  h3 {
+    @apply font-display;
+  }
+  h4 {
+    @apply font-display;
+  }
+  h5 {
+    @apply font-display;
+  }
+  h6 {
+    @apply font-display;
   }
 }
